--- a/client/src/Styles/Home.scss
+++ b/client/src/Styles/Home.scss
@@ -4,22 +4,23 @@
 }
 
 .topMovies {
-    height: 90vh;
+    position: fixed;
+    height: 100vh;
     width: 20vw;
-    margin: 5px;
     background-color: grey;
 }
 
 .search {
-    height: 90vh;
+    height: 100%;
     width: 60vw;
-    margin: 5px;
+    margin-left: 21vw;
     background-color: lightgrey;
 }
 
 .TopComments {
-    height: 90vh;
+    position: fixed;
+    height: 100vh;
     width: 20vw;
-    margin: 5px;
+    margin-left: 82vw;
     background-color: darkgrey;
 }
