Working on styling and formatting

--- a/client/src/Styles/Home.scss
+++ b/client/src/Styles/Home.scss
@@ -7,14 +7,14 @@
     position: fixed;
     height: 100vh;
     width: 20vw;
-    background-color: grey;
+    background-color: rgb(235, 244, 248);
 }
 
 .search {
     height: 100%;
     width: 60vw;
     margin-left: 21vw;
-    background-color: lightgrey;
+    background-color: white;
 }
 
 .TopComments {
@@ -22,5 +22,5 @@
     height: 100vh;
     width: 20vw;
     margin-left: 82vw;
-    background-color: darkgrey;
+    background-color: rgb(235, 244, 248);
 }
