--- a/client/src/Styles/Home.scss
+++ b/client/src/Styles/Home.scss
@@ -8,6 +8,7 @@
     height: 100vh;
     width: 20vw;
     background-color: rgb(235, 244, 248);
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .search {
@@ -23,4 +24,5 @@
     width: 20vw;
     margin-left: 82vw;
     background-color: rgb(235, 244, 248);
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
