Working on the aesthetics and styling

--- a/client/src/Styles/Home.scss
+++ b/client/src/Styles/Home.scss
@@ -9,6 +9,7 @@
     width: 20vw;
     background-color: rgb(235, 244, 248);
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    font-family: 'Roboto', sans-serif;
 }
 
 .search {
@@ -16,6 +17,7 @@
     width: 60vw;
     margin-left: 21vw;
     background-color: white;
+    font-family: 'Roboto', sans-serif;
 }
 
 .TopComments {
@@ -25,4 +27,5 @@
     margin-left: 82vw;
     background-color: rgb(235, 244, 248);
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    font-family: 'Roboto', sans-serif;
 }
