--- a/client/src/Styles/Results.scss
+++ b/client/src/Styles/Results.scss
@@ -41,3 +41,13 @@
     padding: 2px;
     border: 1px solid rgb(214, 211, 211);
 }
+
+.inlineList {
+    list-style: none;
+    li {
+        display: inline-block;
+        margin: 1px;
+        padding: 1px;
+        margin-right: 40px;
+    }
+}
