--- a/client/src/Styles/Home.scss
+++ b/client/src/Styles/Home.scss
@@ -1,22 +1,26 @@
 .fullContainer {
     display: flex;
     flex-direction: row;
+    background-image: url("/Images/theatre.jpg");
+    background-size: cover;                      
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
 }
 
 .topMovies {
     position: fixed;
     height: 100vh;
     width: 20vw;
-    background-color: rgb(235, 244, 248);
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     font-family: 'Roboto', sans-serif;
 }
 
 .search {
+    color: white;
     height: 100%;
     width: 60vw;
     margin-left: 21vw;
-    background-color: white;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -25,7 +29,6 @@
     height: 100vh;
     width: 20vw;
     margin-left: 82vw;
-    background-color: rgb(235, 244, 248);
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     font-family: 'Roboto', sans-serif;
 }
