--- a/client/src/Styles/Results.scss
+++ b/client/src/Styles/Results.scss
@@ -7,26 +7,24 @@
     a {
         padding: 5px;
         margin: 5px;
-        border: 1px solid black;
+        border: 1px solid rgb(255, 255, 255);
         border-radius: 5px;
         cursor: pointer;
+
     }
     a:hover {
-        background-color: rgb(181, 229, 248);
+        background-color: rgb(44, 2, 2);
     }
-}
-
-.paginationActive a {
-    background-color: rgb(181, 229, 248);
 }
 
 .castList {
+    color: white;
     list-style: none;
     li {
         display: inline-block;
         margin: 4px;
         padding: 4px;
-        border: 1px solid black;
+        border: 1px solid rgb(255, 255, 255);
     }
 }
 
@@ -39,7 +37,7 @@
     width: 58vw;
     margin: 5px;
     padding: 4px;
-    border: 1px solid rgb(214, 211, 211);
+    border: 1px solid rgb(255, 255, 255);
 }
 
 .inlineList {
@@ -54,4 +52,23 @@
 
 .moviePoster {
     height: 50%;
+}
+
+#outlined-basic {
+    color: white;
+    border-image: linear-gradient(to top, rgb(75, 14, 14), black) 3;
+    border: 3px solid transparent;
+    border-image: linear-gradient(to top, rgb(75, 14, 14), black) 3;
+    ::placeholder {
+        color: rgb(255, 255, 255);
+        opacity: 1; /* Firefox */
+    }
+}
+
+.searchContainer {
+    color: white;
+    border-image: linear-gradient(to bottom, rgb(75, 14, 14), black) 3;
+    border: 3px solid transparent; 
+    border-image: linear-gradient(to top, rgb(75, 14, 14), black); 
+    border-image-slice: 1;
 }
