--- a/client/src/Styles/TopComments.scss
+++ b/client/src/Styles/TopComments.scss
@@ -1,3 +1,16 @@
+.topCommentsContainer {
+    background-image: url("/Images/Niatruc.jpg");
+    background-size: contain;
+    background-position: center;
+    background-attachment: fixed;
+    position: absolute;
+    height: 100vh;
+    width: 20vw;
+    right: 0;
+    top: 0;
+    z-index: -1;
+}
+
 .topCommentsUL {
     list-style-type: none;
     margin-right: 30px;
